<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yagthu="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_user_profile"
        android:title="@string/section_user_profile"
        android:icon="@drawable/menu_icon_contact"
        android:orderInCategory="1"
        yagthu:showAsAction="always"
        android:visible="true"/>

    <item
        android:id="@+id/action_params"
        android:title="@string/section_params"
        android:icon="@drawable/menu_icon_settings"
        android:orderInCategory="2"
        yagthu:showAsAction="always"
        android:visible="true"/>

    <item
        android:id="@+id/action_about"
        android:title="@string/section_about"
        android:icon="@drawable/menu_icon_information"
        android:orderInCategory="3"
        yagthu:showAsAction="always"
        android:visible="true"/>

</menu>
