<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:padding="20dip"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:background="@color/background">

        <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/action_login" android:textColor="@color/dark" android:textSize="20sp"/>

        <EditText
            android:id="@+id/edit_login"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="50dip"
            android:hint="@string/edit_login" android:textColor="@color/dark" android:textSize="18sp"
            android:inputType="text" android:imeActionLabel="Next" android:imeOptions="actionNext"/>

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:hint="@string/edit_pass" android:textColor="@color/grey" android:textSize="18sp"
            android:inputType="textPassword" android:imeActionLabel="SignIn" android:imeOptions="flagNoExtractUi"/>

        <TextView
            android:id="@+id/button_signin"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:paddingLeft="25dip" android:paddingTop="10dip"
            android:paddingRight="25dip" android:paddingBottom="10dip"
            android:layout_marginTop="50dip"
            android:text="@string/action_signin" android:textColor="@color/white" android:textSize="20sp"
            android:layout_gravity="center_horizontal" android:gravity="center_horizontal"
            android:background="@drawable/button_radius_blue"/>
    </LinearLayout>
</ScrollView>